--- a/kalvium-books/src/component/Home.css
+++ b/kalvium-books/src/component/Home.css
@@ -1,11 +1,20 @@
+body{
+    background-color: #F8F4EC;
+}
+
 .header{
     display: flex;
     position: sticky;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background-color: rgb(243, 243, 243);
+    background-color: #7addd5;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.lo{
+    height: 50px;
+    width: 100px;
 }
 
 .logo{
@@ -48,6 +57,7 @@
     border-radius: 5px;
     height: 40px;
     width: 10vw;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .books-library{
@@ -69,6 +79,11 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.book:hover{
+    background-color: aliceblue;
+    transform: scale(1.1);
+}
+
 .book-title{
     font-size: large;
     text-align: center;
@@ -78,7 +93,12 @@
     cursor: pointer;
 }
 
-
+.book-img:hover{
+    transform: scale(1.1);
+    resize: 1.2px;
+    position: relative;
+    bottom: 3px;
+}
 
 
 
