--- a/kalvium-books/src/component/Register.css
+++ b/kalvium-books/src/component/Register.css
@@ -3,8 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  }
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;  }
 
   .create{
     text-align: center;
@@ -50,7 +49,7 @@
   
   .submitButton {
     text-align: center;
-    background-color: #4caf50;
+    background-color: #4b4dbd;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -60,6 +59,6 @@
   }
   
   .submitButton:hover {
-    background-color: #4a9c4e;
+    background-color: #00388d;
   }
   
